--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -14,11 +14,19 @@ services:
     Ergonode\ImporterMagento1\Infrastructure\:
       resource: '../../Infrastructure/*'
 
-
     Ergonode\ImporterMagento1\Infrastructure\Source\Magento1ImportSource:
       arguments:
         $directory: '%import_directory%'
 
-    Ergonode\Importer\Infrastructure\Service\Import\StartImportService:
+    Ergonode\ImporterMagento1\Infrastructure\Reader\Magento1CsvReader:
       arguments:
         $directory: '%import_directory%'
+
+    Ergonode\ImporterMagento1\Infrastructure\Processor\StartMagento1ImportProcess:
+      arguments:
+        $steps:
+          - '@Ergonode\ImporterMagento1\Infrastructure\Processor\Step\Magento1TemplateProcessor'
+#          - '@Ergonode\ImporterMagento1\Infrastructure\Processor\Step\Magento1MultimediaProcessor'
+          - '@Ergonode\ImporterMagento1\Infrastructure\Processor\Step\Magento1CategoryProcessor'
+          - '@Ergonode\ImporterMagento1\Infrastructure\Processor\Step\Magento1AttributeProcessor'
+          - '@Ergonode\ImporterMagento1\Infrastructure\Processor\Step\Magento1ProductProcessor'
