--- a/composer.json
+++ b/composer.json
@@ -5,18 +5,19 @@
   "homepage": "https://ergonode.com",
   "license": "OSL-3.0",
   "config": {
-    "bin-dir": "bin",
-    "preferred-install": {
-      "*": "dist"
-    },
     "sort-packages": true
   },
   "require": {
     "php": "^7.4",
-    "ergonode/importer": "^1.0.0"
+    "ergonode/importer": "^1.0.0",
+    "ergonode/reader": "^1.0.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^9"
+    "malukenho/docheader": "^0.1.8",
+    "phpstan/phpstan": "^0.12.85",
+    "phpunit/phpunit": "^9.5",
+    "slevomat/coding-standard": "^7.0",
+    "squizlabs/php_codesniffer": "^3.6"
   },
   "autoload": {
     "psr-4": {
@@ -27,5 +28,16 @@
     "psr-4": {
       "Ergonode\\ImporterMagento1\\Tests\\": "tests/"
     }
+  },
+  "scripts": {
+    "test": [
+      "vendor/bin/phpstan analyse",
+      "vendor/bin/phpunit",
+      "vendor/bin/phpcs",
+      "vendor/bin/docheader check src tests"
+    ],
+    "fix": [
+      "vendor/bin/phpcbf"
+    ]
   }
 }
